--- a/index.html
+++ b/index.html
@@ -49,21 +49,15 @@
 
     <div class="card">
       <img src="./image.jfif" alt="John" style="width: 100%" />
-      <h1>Gaurav Sharma</h1>
-      <p class="title">Jaipur</p>
-      <p>Rajasthan</p>
+      <h1>shubham gajanan jagtap</h1>
+      <p class="title">Chh.Sambhajinagar</p>
+      <p>Maharashtra</p>
       <div style="margin: 24px 0">
-        <a href="https://learning-ocean.com/"><i class="fa fa-globe"></i></a>
-        <a href="https://t.me/learningocean"><i class="fa fa-telegram"></i></a>
-        <a href="https://twitter.com/LearningOcean1"
-          ><i class="fa fa-twitter"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/crgaurav/"
+      
+        <a href="https://www.linkedin.com/in/shubham-jagtap-b9663b2a6/"
           ><i class="fa fa-linkedin"></i
         ></a>
-        <a href="https://www.facebook.com/coolgaurav147"
-          ><i class="fa fa-facebook"></i
-        ></a>
+        
       </div>
       <p><button>Contact</button></p>
     </div>
